cabal-version:      3.0
name:               advent-of-code2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             jemand2001
maintainer:         ""
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable advent-of-code2024
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Lib,
        Day1
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        containers
    hs-source-dirs:   app
    default-language: Haskell2010
