cabal-version:      3.0
name:               advent-of-code2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             jemand2001
maintainer:         ""
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-unused-top-binds -O3

executable advent-of-code2024
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Lib,
        Matrix,
        Day1,
        Day2,
        Day3,
        Day4,
        Day5,
        Day6,
        Day7,
        Day8,
        Day9,
        Day10,
        Day11,
        Day12,
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        containers,
        text,
        list-predicate
    hs-source-dirs:   app
    default-language: Haskell2010
